--- a/index.html
+++ b/index.html
@@ -146,7 +146,8 @@
                     <p class="text-dark">&copy;Samir Barbat, Kaiser+Kraft GmbH</p>
                 </div>
                 <div class="col-md-6">
-                    <p class="text-dark"><a href="#" style="text-decoration: none; color: black">impressum</a></p>
+                    <p class="text-dark"><a href="impressum.html"
+                            style="text-decoration: none; color: black">impressum</a></p>
                 </div>
             </div>
         </div>
